# wayland_float_lyrics

./: Cargo.toml  README.md  TODO.txt  WAYLYRIC_PRD.md  config.example.toml  install.sh  wayland-float-lyrics.service
src/: config.rs  events.rs  fetcher.rs  lrc_parser.rs  main.rs  mpris.rs  overlay.rs  title_parser.rs
