[package]
name = "wayland-float-lyrics"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Wayland 桌面悬浮歌词 — 通过 MPRIS 自动跟随系统播放"
license = "MIT"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
async-channel = "2"
gdk4-x11 = { version = "0.9", optional = true }
x11rb = { version = "0.13", optional = true }

[features]
default = ["layer-shell", "x11-dock"]
layer-shell = []
x11-dock = ["dep:gdk4-x11", "dep:x11rb"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
